<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="16dp"
    tools:context=".CadastroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_product"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_marginBottom="15dp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_camera"
        android:id="@+id/img_foto_produto"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_produto"
        android:hint="@string/product_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_qtd"
        android:inputType="number"
        android:hint="@string/product_quantity"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_valor"
        android:inputType="numberDecimal"
        android:hint="@string/cost_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn"
        android:id="@+id/btn_inserir"/>

</LinearLayout>